--- a/mappa.html
+++ b/mappa.html
@@ -103,6 +103,18 @@
         .custom-popup {
             margin-bottom: 30px;
         }
+
+          .custom-popup .leaflet-popup-close-button {
+            color: #ff4d4d;
+            font-size: 20px;
+            font-weight: bold;
+            opacity: 1;
+            right: 8px;
+            top: 8px;
+        }
+        .custom-popup .leaflet-popup-close-button:hover {
+            color: #ff1a1a;
+        }
     </style>
 </head>
 <body>
