--- a/mappa.html
+++ b/mappa.html
@@ -182,12 +182,12 @@
             // Mostra il popup iniziale
             createPopup();
 
-            // Rimuovi il popup quando si fa zoom
-            map.on('zoomstart', function() {
-                if (popup) {
-                    map.removeLayer(popup);
-                }
-            });
+          // Rimuovi il popup quando lo zoom è manuale
+           map.on('zoomstart', function(e) {
+          if (popup && e.originalEvent) {  // Controlla se l'evento ha un originalEvent (zoom manuale)
+        map.closePopup(popup);
+        }
+       });
 
             let routingControl = null;
             
