--- a/mappa.html
+++ b/mappa.html
@@ -72,10 +72,10 @@
             border-radius: 50%;
         }
         .boundary-color {
-            background-color: #970a2c;
+            background-color: #FF0000;
         }
         .library-color {
-            background-color: #970a2c;
+            background-color: #0000FF;
         }
         .leaflet-routing-container {
             position: relative;
@@ -150,7 +150,7 @@
                         width: 16px;
                         height: 16px;
                         display: inline-block;
-                        background-color: #970a2c;
+                        background-color: #0000FF;
                         border-radius: 50%;
                         border: 2px solid white;
                     "></span>`,
@@ -256,7 +256,7 @@
 
                     boundaries.forEach(boundary => {
                         L.polyline(boundary, {
-                            color: '#970a2c',
+                            color: '#FF0000',
                             weight: 3,
                             opacity: 0.7
                         }).addTo(map);
@@ -272,8 +272,7 @@
                             </div>
                             <div class="legend-item">
                                 <span class="library-color"></span>
-                                Biblioteca Elsa Morante
-                                <br>&nbsp;&nbsp;&nbsp;&nbsp;Via Adolfo Cozza, 7
+                                Biblioteca Elsa Morante<br>&nbsp;&nbsp;&nbsp;&nbsp;Via Adolfo Cozza, 7
                             </div>
                         `;
                         return this._div;
