--- a/mappa.html
+++ b/mappa.html
@@ -67,14 +67,11 @@
             width: 16px;
             height: 16px;
             margin-right: 4px;
-            display: inline-block;
-            border: 2px solid white;
-            border-radius: 50%;
         }
-        .boundary-color {
-            background-color: #FF0000;
+        .legend-border span {
+            background-color: #970a2c;
         }
-        .library-color {
+        .legend-library span {
             background-color: #0000FF;
         }
         .leaflet-routing-container {
@@ -143,21 +140,7 @@
             }).addTo(map);
 
             const markerCoords = percorso[percorso.length - 1];
-            const marker = L.marker(markerCoords, {
-                icon: L.divIcon({
-                    className: 'custom-marker',
-                    html: `<span style="
-                        width: 16px;
-                        height: 16px;
-                        display: inline-block;
-                        background-color: #0000FF;
-                        border-radius: 50%;
-                        border: 2px solid white;
-                    "></span>`,
-                    iconSize: [16, 16],
-                    iconAnchor: [8, 8]
-                })
-            }).addTo(map);
+            const marker = L.marker(markerCoords).addTo(map);
             
             let routingControl = null;
             
@@ -256,7 +239,7 @@
 
                     boundaries.forEach(boundary => {
                         L.polyline(boundary, {
-                            color: '#FF0000',
+                            color: '#970a2c',
                             weight: 3,
                             opacity: 0.7
                         }).addTo(map);
@@ -266,13 +249,11 @@
                     legend.onAdd = function() {
                         this._div = L.DomUtil.create('div', 'legend');
                         this._div.innerHTML = `
-                            <div class="legend-item">
-                                <span class="boundary-color"></span>
-                                Confini Municipio X
+                            <div class="legend-item legend-border">
+                                <span></span>Confini Municipio X
                             </div>
-                            <div class="legend-item">
-                                <span class="library-color"></span>
-                                Biblioteca Elsa Morante<br>&nbsp;&nbsp;&nbsp;&nbsp;Via Adolfo Cozza, 7
+                            <div class="legend-item legend-library">
+                                <span></span>Biblioteca Elsa Morante<br>Via Adolfo Cozza, 7
                             </div>
                         `;
                         return this._div;
