--- a/mappa.html
+++ b/mappa.html
@@ -71,8 +71,10 @@
         .legend-border span {
             background-color: #970a2c;
         }
-        .legend-library span {
+        .legend-path span {
             background-color: #0000FF;
+            height: 4px;
+            width: 20px;
         }
         .leaflet-routing-container {
             position: relative;
@@ -252,8 +254,8 @@
                             <div class="legend-item legend-border">
                                 <span></span>Confini Municipio X
                             </div>
-                            <div class="legend-item legend-library">
-                                <span></span>Biblioteca Elsa Morante<br>Via Adolfo Cozza, 7
+                            <div class="legend-item legend-path">
+                                <span></span>Percorso Biblioteca Elsa Morante<br>Via Adolfo Cozza, 7
                             </div>
                         `;
                         return this._div;
