--- a/mappa.html
+++ b/mappa.html
@@ -72,14 +72,17 @@
             height: 16px;
             background-color: #970a2c;
         }
-        .legend-path span {
+ .legend-path span {
             display: inline-block;
             width: 20px;
             height: 4px;
-            background-image: linear-gradient(to right, #0000FF 50%, transparent 50%);
-            background-size: 10px 4px;
-            background-repeat: repeat-x;
-        }
+            background: repeating-linear-gradient(
+                to right,
+                #0000FF,
+                #0000FF 5px,
+                transparent 5px,
+                transparent 10px
+            );
         .leaflet-routing-container {
             position: relative;
         }
