--- a/mappa.html
+++ b/mappa.html
@@ -73,14 +73,12 @@
             background-color: #970a2c;
         }
         /* Previous styles remain the same */
-        .legend-path span {
+    .legend-path span {
             display: inline-block;
-            width: 20px;
-            height: 4px;
+            width: 10px;
+            height: 10px;
             background-color: #0000FF;
-            background-image: linear-gradient(to right, transparent 0%, transparent 50%, #0000FF 50%, #0000FF 100%);
-            background-size: 10px 4px;
-            background-repeat: repeat-x;
+            border-radius: 50%;
         }
         .leaflet-routing-container {
             position: relative;
