--- a/mappa.html
+++ b/mappa.html
@@ -73,13 +73,25 @@
             background-color: #970a2c;
         }
         /* Previous styles remain the same */
-     .legend-path span {
+        .legend-path span {
             display: inline-block;
-            width: 12px;
-            height: 20px;
+            width: 10px;
+            height: 16px;
             background-color: #0000FF;
-            clip-path: path('M6 0 L12 20 Q6 25, 0 20 Z');
-            transform: rotate(180deg);
+            border-radius: 50% 50% 0 0;
+            position: relative;
+        }
+        .legend-path span::after {
+            content: '';
+            position: absolute;
+            bottom: -6px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 0;
+            height: 0;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            border-top: 6px solid #0000FF;
         }
         .leaflet-routing-container {
             position: relative;
