--- a/mappa.html
+++ b/mappa.html
@@ -73,13 +73,14 @@
             background-color: #970a2c;
         }
         /* Previous styles remain the same */
-        .legend-path span {
+  .legend-path span {
             display: inline-block;
-            width: 10px;
-            height: 16px;
-            background-color: #0000FF;
-            border-radius: 50% 50% 0 0;
-            position: relative;
+            width: 12px;
+            height: 20px;
+            background-image: url('marker.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
         }
         .legend-path span::after {
             content: '';
