--- a/mappa.html
+++ b/mappa.html
@@ -7,49 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
     <link rel="icon" href="favicon.png" type="image/png">
- <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-        }
-        #map {
-            height: 100vh;
-            width: 100%;
-        }
-        .search-box {
-            position: absolute;
-            top: 10px;
-            left: 50px;
-            z-index: 1000;
-            background: white;
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
-            display: flex;
-            align-items: center;
-        }
-        .search-box input {
-            width: 250px;
-            margin-right: 10px;
-            padding: 5px 10px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-            font-size: 14px;
-        }
-        .search-box button {
-            background-color: #4285F4;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 3px;
-            cursor: pointer;
-            font-size: 14px;
-        }
+    <style>
+        /* Previous CSS remains the same */
         .legend {
             background-color: rgba(255, 255, 255, 0.8);
-            padding: 6px 8px;
+            padding: 10px;
             font: 14px/16px Arial, Helvetica, sans-serif;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
             border-radius: 5px;
@@ -57,67 +19,23 @@
             bottom: 10px;
             right: 10px;
             z-index: 1000;
+            max-width: 250px;
         }
         .legend-item {
             display: flex;
             align-items: center;
-            margin-bottom: 4px;
+            margin-bottom: 5px;
+        }
+        .legend-item img {
+            width: 24px;
+            height: 24px;
+            margin-right: 8px;
         }
         .legend-item span {
-            margin-right: 4px;
-        }
-        .legend-border span {
-            display: inline-block;
             width: 16px;
             height: 16px;
+            margin-right: 8px;
             background-color: #970a2c;
-        }
-        /* Previous styles remain the same */
-  .legend-path span {
-            display: inline-block;
-            width: 12px;
-            height: 20px;
-            background-image: url('marker.png');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-        .legend-path span::after {
-            content: '';
-            position: absolute;
-            bottom: -6px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 0;
-            height: 0;
-            border-left: 5px solid transparent;
-            border-right: 5px solid transparent;
-            border-top: 6px solid #0000FF;
-        }
-        .leaflet-routing-container {
-            position: relative;
-        }
-        .routing-close-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            width: 30px;
-            height: 30px;
-            background-color: #ff4d4d;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-            font-size: 18px;
-            z-index: 1000;
-            transition: background-color 0.3s;
-        }
-        .routing-close-btn:hover {
-            background-color: #ff1a1a;
         }
     </style>
 </head>
@@ -160,7 +78,14 @@
             }).addTo(map);
 
             const markerCoords = percorso[percorso.length - 1];
-            const marker = L.marker(markerCoords).addTo(map);
+            const markerIcon = L.icon({
+                iconUrl: 'marker.png',
+                iconSize: [32, 32],
+                iconAnchor: [16, 32],
+                popupAnchor: [0, -32]
+            });
+
+            const marker = L.marker(markerCoords, {icon: markerIcon}).addTo(map);
             
             let routingControl = null;
             
@@ -266,19 +191,20 @@
                     });
 
                     const legend = L.control({position: 'bottomright'});
-  legend.onAdd = function() {
-            this._div = L.DomUtil.create('div', 'legend');
-            this._div.innerHTML = `
-                <div class="legend-item legend-border">
-                    <span></span>Confini Municipio X
-                </div>
-                <div class="legend-item legend-path">
-                    <img src="marker.png" alt="Marker">
-                    Biblioteca Elsa Morante<br>Via Adolfo Cozza, 7
-                </div>
-            `;
-            return this._div;
-        };
+                    legend.onAdd = function() {
+                        this._div = L.DomUtil.create('div', 'legend');
+                        this._div.innerHTML = `
+                            <div class="legend-item">
+                                <span></span>Confini Municipio X
+                            </div>
+                            <div class="legend-item">
+                                <img src="marker.png" alt="Biblioteca">
+                                Biblioteca Elsa Morante<br>
+                                Via Adolfo Cozza, 7
+                            </div>
+                        `;
+                        return this._div;
+                    };
                     legend.addTo(map);
 
                     const bounds = L.latLngBounds(boundaries.flat());
