--- a/termini.html
+++ b/termini.html
@@ -1059,7 +1059,7 @@ a:hover {
  <div class="library-name">
     <div class="library-info">
      
-<a href="https://parvares.github.io/mappa/" 
+<a href="https://bibliotecamorante.github.io/mappa/" 
    target="_blank" 
    title="Visualizza la posizione sulla mappa">
     <img alt="Posizione" 
