--- a/termini.html
+++ b/termini.html
@@ -1201,6 +1201,7 @@ a:hover {
              onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
         <div class="info">
             <div>
+		<a href="https://bibliotecamorante.github.io/mappa/" target="_blank" style="text-decoration: none; color: inherit;">
                 <i class="fas fa-location-dot"></i>
                 <span>
                     Via Adolfo Cozza 7
