--- a/termini.html
+++ b/termini.html
@@ -1004,7 +1004,15 @@ a:hover {
     justify-content: center;
   }
 }
+.info div {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Adds some space between the icon and text */
+}
 
+.info i {
+    flex-shrink: 0; /* Prevents icon from shrinking */
+}
       
    </style>
 </head>
