--- a/termini.html
+++ b/termini.html
@@ -1202,10 +1202,12 @@ a:hover {
         <div class="info">
             <div>
                 <i class="fas fa-location-dot"></i>
-                <span>
-                    Via Adolfo Cozza 7
-                    <span class="block">Municipio X, 00121 Roma</span>
-                </span>
+        <span>
+            <a href="https://bibliotecamorante.github.io/mappa/" 
+               target="_blank" 
+               title="Visualizza la posizione sulla mappa">Via Adolfo Cozza 7</a>
+            <span class="block">Municipio X, 00121 Roma</span>
+        </span>
             </div>
             <div>
                 <i class="fas fa-phone"></i>
