--- a/raccolta.html
+++ b/raccolta.html
@@ -655,11 +655,16 @@ a:hover {
         
         <div class="flex flex-col md:flex-row md:space-x-8 space-y-2 md:space-y-0 text-center md:text-left text-sm">
             <div class="flex items-center justify-center md:justify-start space-x-2">
-                <i class="fas fa-location-dot w-4"></i>
-                <span class="flex flex-col">
-                    <span>Via Adolfo Cozza 7</span>
-                    <span>Municipio X, 00121 Roma</span>
-                </span>
+                <a href="https://bibliotecamorante.github.io/mappa/" 
+                   target="_blank" 
+                   title="Visualizza la posizione sulla mappa" 
+                   class="flex items-center space-x-2">
+                    <i class="fas fa-location-dot w-4"></i>
+                    <span class="flex flex-col">
+                        <span>Via Adolfo Cozza 7</span>
+                        <span>Municipio X, 00121 Roma</span>
+                    </span>
+                </a>
             </div>
             
             <div class="flex items-center justify-center md:justify-start space-x-4">
