--- a/raccolta.html
+++ b/raccolta.html
@@ -658,7 +658,7 @@ a:hover {
                 <a href="https://bibliotecamorante.github.io/mappa/" 
                    target="_blank" 
                    title="Visualizza la posizione sulla mappa" 
-                   class="flex items-center space-x-2">
+                   class="flex items-center space-x-2 no-underline">
                     <i class="fas fa-location-dot w-4"></i>
                     <span class="flex flex-col">
                         <span>Via Adolfo Cozza 7</span>
