--- a/raccolta.html
+++ b/raccolta.html
@@ -482,6 +482,13 @@ a:hover {
         margin-bottom: 0.3cm;
     }
 }
+
+/* Prevent color change for footer address link */
+footer a.no-underline,
+footer a.no-underline:hover {
+    color: white !important;
+    text-decoration: none !important;
+}
         
     </style>
 </head>
