--- a/raccolta.html
+++ b/raccolta.html
@@ -660,19 +660,19 @@ footer a.no-underline:hover {
      onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
         </div>
         
-       <div class="flex flex-col md:flex-row md:space-x-8 space-y-2 md:space-y-0 text-center md:text-left text-sm">
-           <div class="flex items-center justify-center md:justify-start space-x-2">
-               <a href="https://bibliotecamorante.github.io/mappa/" 
-                  target="_blank" 
-                  title="Visualizza la posizione sulla mappa" 
-                  class="flex items-center space-x-2 no-underline hover:no-underline text-white hover:text-white [&:hover]:!text-white">
-                   <i class="fas fa-location-dot w-4"></i>
-                   <span class="flex flex-col">
-                       <span>Via Adolfo Cozza 7</span>
-                       <span>Municipio X, 00121 Roma</span>
-                   </span>
-               </a>
-           </div>
+        <div class="flex flex-col md:flex-row md:space-x-8 space-y-2 md:space-y-0 text-center md:text-left text-sm">
+            <div class="flex items-center justify-center md:justify-start space-x-2">
+                <a href="https://bibliotecamorante.github.io/mappa/" 
+                   target="_blank" 
+                   title="Visualizza la posizione sulla mappa" 
+                   class="flex items-center space-x-2 no-underline">
+                    <i class="fas fa-location-dot w-4"></i>
+                    <span class="flex flex-col">
+                        <span>Via Adolfo Cozza 7</span>
+                        <span>Municipio X, 00121 Roma</span>
+                    </span>
+                </a>
+            </div>
             
             <div class="flex items-center justify-center md:justify-start space-x-4">
                 <div class="flex items-center space-x-2">
