--- a/raccolta.html
+++ b/raccolta.html
@@ -559,7 +559,7 @@ footer a.no-underline:hover {
 <div class="flex items-center mb-4">
 <!-- Find and replace the location icon link section with this updated code -->
 
-<a href="https://www.openstreetmap.org/?mlat=41.7325117&mlon=12.2718834&zoom=18" target="_blank" title="Visualizza la posizione sulla mappa">
+<a href="https://bibliotecamorante.github.io/mappa/" target="_blank" title="Visualizza la posizione sulla mappa">
   <img src="location.svg" alt="Location Icon" class="mr-2" style="height: 24px; width: 24px; 
     filter: invert(13%) sepia(82%) saturate(2079%) hue-rotate(334deg) brightness(87%) contrast(101%);
     transition: filter 0.3s ease, transform 0.3s ease;  /* Aggiunta transizione per transform */
