--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Dona libri a Ostia e supporta la cultura con libri usati o nuovi. Scopri come fare la differenza!">
+   <meta name="description" content="Donazione libri Biblioteca Elsa Morante di Ostia Municipio Roma X">
 
 
     <title>Modulo donazione</title>
