--- a/index.html
+++ b/index.html
@@ -1842,15 +1842,15 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
 
 
 <div class="flex items-center justify-center space-x-2">
-  <a href="https://bibliotecamorante.github.io/mappa/" target="_blank" style="text-decoration: none; color: inherit;">
-    <i class="fas fa-location-dot w-4"></i>
-  </a>
-  <a href="https://bibliotecamorante.github.io/mappa/" target="_blank" style="text-decoration: none; color: inherit;">
-    <span class="flex flex-col">
-      <span>Via Adolfo Cozza 7</span>
-      <span>Municipio X, 00121 Roma</span>
-    </span>
-  </a>
+    <a href="https://bibliotecamorante.github.io/mappa/" target="_blank" style="text-decoration: none; color: inherit;">
+        <i class="fas fa-location-dot w-4"></i>
+    </a>
+    <a href="https://bibliotecamorante.github.io/mappa/" target="_blank" style="text-decoration: none; color: inherit;" title="Apri mappa biblioteche di Roma">
+        <span class="flex flex-col">
+            <span>Via Adolfo Cozza 7</span>
+            <span>Municipio X, 00121 Roma</span>
+        </span>
+    </a>
 </div>
 
       <div class="flex items-center justify-center space-x-4">
