--- a/index.html
+++ b/index.html
@@ -615,7 +615,10 @@ document.head.appendChild(style);
   white-space: normal !important;
   line-height: 1.4 !important;
 }	
-	
+/* Cambia il colore del numero quando viene cliccato o "tappato" */
+    .phone-link:active {
+        color: rgba(255, 255, 255, 0.7); /* Bianco più leggero */
+    }	
 </style>
 
 
@@ -1847,7 +1850,7 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
     </a>
     <a href="https://bibliotecamorante.github.io/mappa/" target="_blank" style="text-decoration: none; color: inherit;" title="Apri mappa biblioteche di Roma">
         <span class="flex flex-col">
-            <span>Via Adolfo Cozza 7</span>
+            <span>Porto turistico di Roma</span>
             <span>Municipio X, 00121 Roma</span>
         </span>
     </a>
@@ -1874,19 +1877,6 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
     </div>
   </div>
 </footer>
-
-
-	
-
-<style>
-    /* Cambia il colore del numero quando viene cliccato o "tappato" */
-    .phone-link:active {
-        color: rgba(255, 255, 255, 0.7); /* Bianco più leggero */
-    }
-</style>
-
-
-
 
 
 
