--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
        
 <div class="bg-blue-50 border-l-4 border-blue-500 p-4 mb-6 rounded-r">
-    Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con <span class="required-asterisk">*</span> sono obbligatori. E' raccomandato compilare anche il campo ISBN per garantire una più accurata identificazione dei volumi.
+    Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con <span class="required-asterisk">*</span> sono obbligatori. Si consiglia di utilizzare la fotocamera dello smartphone o del tablet per leggere automaticamente il codice ISBN e compilare il relativo campo in modo semplice e veloce.
 </div>
 
             
