--- a/index.html
+++ b/index.html
@@ -183,25 +183,48 @@ select.error {
 /* Aggiorna il colore del contatore dei libri con una sfumatura di verde */
 .book-counter {
     background: linear-gradient(to bottom right, #34d399, #10b981);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transform: translateZ(0);
 }
 
 /* Stile per il pulsante "Aggiungi Libro" con sfumatura verde */
 .book-entry > button[type="button"].add-book-btn {
     width: 100%;
     padding: 0.75rem 1rem;
-    background: linear-gradient(to bottom right, #34d399, #10b981);
+    background: linear-gradient(135deg, #34d399, #10b981);
     color: white;
     border: none;
     border-radius: 0.375rem;
     transition: transform 0.3s ease;
     margin-top: 0.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transform: translateZ(0);
+    position: relative;
+    overflow: hidden;
+}
+
+.book-entry > button[type="button"].add-book-btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(135deg, #34d399, #10b981);
+    z-index: -1;
 }
 
 .book-entry > button[type="button"].add-book-btn:hover {
     transform: translateY(-2px);
-    background: linear-gradient(to bottom right, #10b981, #059669);
+    background: linear-gradient(135deg, #10b981, #059669);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+.book-entry > button[type="button"].add-book-btn:hover::before {
+    background: linear-gradient(135deg, #10b981, #059669);
 }
 
 
