--- a/index.html
+++ b/index.html
@@ -181,60 +181,27 @@ select.error {
 
 
 /* Aggiorna il colore del contatore dei libri con una sfumatura di verde */
-/* SOLUZIONE COMPLETA PER IL PULSANTE AGGIUNGI LIBRO */
 .book-counter {
-    background: #10b981; /* Verde solido invece del gradiente */
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+    background: linear-gradient(to bottom right, #34d399, #10b981);
 }
 
-/* Pulsante Aggiungi Libro - SOLIDO senza gradiente */
+/* Stile per il pulsante "Aggiungi Libro" con sfumatura verde */
 .book-entry > button[type="button"].add-book-btn {
     width: 100%;
     padding: 0.75rem 1rem;
-    background: #10b981; /* Verde solido */
+    background: linear-gradient(to bottom right, #34d399, #10b981);
     color: white;
     border: none;
     border-radius: 0.375rem;
-    transition: all 0.3s ease;
+    transition: transform 0.3s ease;
     margin-top: 0.5rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    position: relative;
-    font-weight: 600;
-    font-size: 1rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .book-entry > button[type="button"].add-book-btn:hover {
-    transform: translateY(-1px);
-    background: #059669; /* Verde più scuro per hover */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
-}
-
-/* Fix per il pulsante Scansione ISBN */
-.scan-isbn-btn {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    transform: translateZ(0);
-}
-
-/* Fix generale per tutti i pulsanti su tablet */
-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0.375rem;
-}
-
-/* Fix specifico per problemi di rendering su Safari/iOS */
-@media not all and (min-resolution:.001dpcm) { 
-    @supports (-webkit-appearance:none) {
-        .book-entry > button[type="button"].add-book-btn {
-            background: #10b981;
-            border: 1px solid #0da271;
-        }
-    }
+    transform: translateY(-2px);
+    background: linear-gradient(to bottom right, #10b981, #059669);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
 
