--- a/index.html
+++ b/index.html
@@ -189,18 +189,25 @@ select.error {
 .book-entry > button[type="button"].add-book-btn {
     width: 100%;
     padding: 0.75rem 1rem;
-    background: linear-gradient(to bottom right, #34d399, #10b981);
+    /* Gradiente più fluido e compatibile con i tablet */
+    background: linear-gradient(135deg, #34d399 0%, #10b981 100%);
     color: white;
     border: none;
     border-radius: 0.375rem;
-    transition: transform 0.3s ease;
+    transition: all 0.3s ease;
     margin-top: 0.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Aggiunto per migliorare il rendering su tablet */
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: transform;
 }
 
 .book-entry > button[type="button"].add-book-btn:hover {
     transform: translateY(-2px);
-    background: linear-gradient(to bottom right, #10b981, #059669);
+    background: linear-gradient(135deg, #10b981 0%, #059669 100%);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
