--- a/index.html
+++ b/index.html
@@ -189,28 +189,28 @@ select.error {
 .book-entry > button[type="button"].add-book-btn {
     width: 100%;
     padding: 0.75rem 1rem;
-    /* Gradiente più fluido e compatibile con i tablet */
-    background: linear-gradient(135deg, #34d399 0%, #10b981 100%);
+    background-color: #10b981; /* Verde solido - nessun gradiente */
     color: white;
     border: none;
     border-radius: 0.375rem;
     transition: all 0.3s ease;
     margin-top: 0.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    /* Aggiunto per migliorare il rendering su tablet */
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    will-change: transform;
+    /* Assicura un rendering pulito */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .book-entry > button[type="button"].add-book-btn:hover {
     transform: translateY(-2px);
-    background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+    background-color: #059669; /* Verde più scuro al hover */
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
+.book-entry > button[type="button"].add-book-btn:active {
+    transform: translateY(0);
+    background-color: #047857; /* Verde ancora più scuro quando si clicca */
+}
 
 
 
