--- a/index.html
+++ b/index.html
@@ -189,18 +189,37 @@ select.error {
 .book-entry > button[type="button"].add-book-btn {
     width: 100%;
     padding: 0.75rem 1rem;
-    background: linear-gradient(to bottom right, #34d399, #10b981);
+    background-color: #10b981; /* Sostituisce il gradiente */
     color: white;
     border: none;
     border-radius: 0.375rem;
-    transition: transform 0.3s ease;
+    transition: all 0.3s ease;
     margin-top: 0.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.book-entry > button[type="button"].add-book-btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to bottom right, #34d399, #10b981);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.book-entry > button[type="button"].add-book-btn:hover::before {
+    opacity: 1;
 }
 
 .book-entry > button[type="button"].add-book-btn:hover {
     transform: translateY(-2px);
-    background: linear-gradient(to bottom right, #10b981, #059669);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
