--- a/index.html
+++ b/index.html
@@ -185,42 +185,44 @@ select.error {
     background: linear-gradient(to bottom right, #34d399, #10b981);
 }
 
-/* Stile per il pulsante "Aggiungi Libro" con sfumatura verde */
+
+/* STILE SEMPLIFICATO per pulsante Aggiungi Libro - NIENTE GRADIENTI */
 .book-entry > button[type="button"].add-book-btn {
     width: 100%;
     padding: 0.75rem 1rem;
-    background-color: #10b981; /* Sostituisce il gradiente */
+    background-color: #10b981; /* VERDE SOLIDO - niente gradienti */
     color: white;
     border: none;
     border-radius: 0.375rem;
-    transition: all 0.3s ease;
     margin-top: 0.5rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
     position: relative;
-    overflow: hidden;
     z-index: 1;
+    -webkit-tap-highlight-color: transparent; /* Importante: tocca il blu su mobile */
 }
 
-.book-entry > button[type="button"].add-book-btn::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to bottom right, #34d399, #10b981);
-    z-index: -1;
-    opacity: 0;
-    transition: opacity 0.3s ease;
+/* Solo per computer con mouse */
+@media (hover: hover) {
+    .book-entry > button[type="button"].add-book-btn:hover {
+        background-color: #059669; /* Verde più scuro */
+        transform: translateY(-1px);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+    }
 }
 
-.book-entry > button[type="button"].add-book-btn:hover::before {
-    opacity: 1;
+/* Quando premi il pulsante su tablet/telefono */
+.book-entry > button[type="button"].add-book-btn:active {
+    background-color: #047857; /* Verde ancora più scuro */
+    transform: scale(0.98);
 }
 
-.book-entry > button[type="button"].add-book-btn:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+/* Assicurati che i numeri dei libri siano SEMPRE visibili */
+.book-counter {
+    background: #10b981;
+    position: relative;
+    z-index: 100; /* NUMERO ALTO = sta sopra a tutto */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 
